<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".08"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".92"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/purple_ellipse"
            android:contentDescription="@string/ellipse_image"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nimbo_white_logo"
            android:contentDescription="@string/nimbo_white_logo"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintBottom_toTopOf="@id/et_layout_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintBottom_toTopOf="@id/gl_half">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="email igual de largo"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/email"
            android:textColorHint="@color/text_hint_color"
            android:autofillHints="emailAddress"
            android:background="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/im_check_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_32"
        android:visibility="invisible"
        android:layout_margin="8dp"
        android:contentDescription="@string/check_icon"
        app:layout_constraintTop_toTopOf="@id/et_layout_email"
        app:layout_constraintBottom_toBottomOf="@id/et_layout_email"
        app:layout_constraintEnd_toEndOf="@id/et_layout_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/gl_half">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="contrasena super larga"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/contrasena"
            android:textColorHint="@color/text_hint_color"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/im_check_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_32"
        android:visibility="invisible"
        android:layout_margin="8dp"
        android:contentDescription="@string/check_icon"
        app:layout_constraintTop_toTopOf="@id/et_layout_password"
        app:layout_constraintBottom_toBottomOf="@id/et_layout_password"
        app:layout_constraintEnd_toEndOf="@id/et_layout_password"/>

    <TextView
        android:id="@+id/bttn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue_so"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/et_layout_password"/>

    <TextView
        android:id="@+id/tv_alerts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_alert"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/red_border"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/bttn_forgot_password"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        android:visibility="invisible"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bttn_login"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/bg_blueso_purpleso_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>