<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/nimbo_splash_logo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/nimbo_logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bttn_start_session"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/start_session"
        android:textColor="@color/white"
        android:background="@drawable/bg_blueso_purpleso_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bttn_register"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bttn_register"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="50dp"
        android:text="@string/register"
        android:textColor="@color/purple_so"
        android:background="@drawable/bg_purple_border_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>